--- a/gestion-hotel/pom.xml
+++ b/gestion-hotel/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org</groupId>
     <artifactId>gestion-hotel</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.1-SNAPSHOT</version>
 
     <packaging>jar</packaging>
    
@@ -20,12 +20,62 @@
                 <configuration>
                     <archive>
                         <manifest>
+                            <addClasspath>true</addClasspath>
+                            <classpathPrefix>lib/</classpathPrefix>
                             <mainClass>org.MainClass</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
             </plugin>
+            <plugin>
+                <artifactId>maven-clean-plugin</artifactId>
+                <version>3.1.0</version>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.1.1</version>
+                <configuration>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                    <archive>
+                        <manifest>
+                            <mainClass>org.MainClass</mainClass>
+                        </manifest>
+                    </archive>
+                    <appendAssemblyId>false</appendAssemblyId>
+                    <includeBaseDirectory>false</includeBaseDirectory>
+                    <fileSets>
+                        <fileSet>
+                            <directory>src/main/java/Files</directory>
+                            <outputDirectory>/</outputDirectory>
+                        </fileSet>
+                    </fileSets>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
+        <resources>
+            <resource>
+                <directory>src/main/java/Files</directory>
+                <targetPath>/Files</targetPath>
+                <includes>
+                    <include>**/*.xml</include> <!-- Si tienes otros archivos de recursos aparte de las imágenes -->
+                    <include>**/*.png</include>
+                    <include>**/*.jpg</include>
+                    <!-- Incluye cualquier otro tipo de imagen que necesites -->
+                </includes>
+            </resource>
+        </resources>
     </build>
     <dependencies>
         <dependency>
@@ -47,7 +97,7 @@
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
